--- a/src/stylesheets/components/_header-responsive.scss
+++ b/src/stylesheets/components/_header-responsive.scss
@@ -23,7 +23,7 @@ header {
     &.row {
       background: $primary-color;
       margin: 0 !important;
-      padding: 10px 20px 5px;
+      padding: 10px 20px 6px;
     }
 
     h1 {
